--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "@mui/material": "^6.4.4",
     "cra-template": "1.2.0",
     "firebase": "^11.3.1",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "tailwindcss": "^3.3.5",
+    "postcss": "^8.4.14",
+    "postcss-extend": "^1.0.5",
+    "postcss-import": "^14.1.0",
+    "postcss-import-ext-glob": "^2.0.1",
+    "postcss-preset-env": "^7.8.3",
+    "postcss-reporter": "^7.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,8 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "postcss-import": "^16.1.0"
   }
 }
